valley_girl_app/app/assets/stylesheets/main.scss.css
* {
  padding:0;
  margin:0;
  text-decoration: none;
  font-family: 'Dosis', sans-serif;
  color: black;
}

/*////////////LANDING PAGE/////////////////*/
.links-container {
  float: right;
  margin-top: -4em;
  width: 100%;
}

.link {
  display: inline-block;
  width: 20%;
  margin: 1em;
}

#landing-page-header {
  text-align: center;
  margin-top: -2em;
}

#totally_valley_logo {
  width: 30%;
  margin: 1em;
}

h1 {
  color: black;
  font-weight: bold;
  font-size: 3.5em;
  margin-top: 1em;
}

h2 {
  color: black;
  font-weight: bold;
  font-size: 3em;
}

h3 {
  font-size: 2em;
}

h4 {
  font-size: 1.5em;
}

body {
  background-image: url("valley_girl_background.png");
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  height: 100%;
}

#logo-links {
  display: inline-block;
}

.links:hover {
   transform: scale(1.1); 
}

.link:hover {
  transform: scale(1.1);
}

/*LINK BACK TO MAIN AND INDEX PAGES IN FOOTER*/

.back-to-link {
    width: 10%;
    margin-bottom: -10em;
    margin-left: 1em;
}

.back-to-link:hover {
    transform: scale(1.1);
}

footer {
  margin-top: -2em;
  padding: 1em;
  margin-left: 6em;
}

/*////////////SOUND BUTTONS ON LANDING PAGE///////////////*/

button {
  background-color: #e8e8e8;
  color: white;
  border: none;
  margin: 1em;
  font-size: 2.5em;
  font-weight: bold;
}

button:hover {
   transform: scale(1.5);
}

#as-if-sound {
  float: left;
  margin-left: 0em;
  margin-top: -11em;
}

#wow-sound {
  float: left;
  margin-left: 4em;
  margin-top: -6.5em;
}

#popular-sound {
  float: right;
  margin-right: 5em;
  margin-top: -3em;
}

#fer-sure-sound {
  float: right;
  margin-right: 7em;
  margin-top: -6.5em;
}

/*//////////////MOVIE & SONGS INDEX PAGES///////////////////*/

#movielinks-container {
  background-color: #ffffff;
  border: 1px solid black;
  border-radius: 4px;
  opacity: 0.6;
  float: right;
  padding: 3.5em;
  margin-top: -27em;
  margin-right: 3em;
}

#movies-logo {
  width: 35%;
  margin: 5em;
}

#songlinks-container {
  background-color: #ffffff;
  border: 1px solid black;
  border-radius: 4px;
  opacity: 0.6;
  float: right;
  padding: 2em;
  margin-top: -30em;
  margin-right: 3em;
}

#songs-logo {
  width: 35%;
  margin: 4em;
}

#storelinks-container {
  background-color: #ffffff;
  border: 1px solid black;
  border-radius: 4px;
  opacity: 0.6;
  float: right;
  padding: 2em;
  margin-top: -4em;
  margin-right: 6em;
}

#stores-logo {
  width: 20%;
  margin-left: 6em;
}

/*/////////////SHOW PAGES DISPLAY///////////////*/

#song-image {
  width: 30%;
  box-shadow: 20px 20px 10px #888888;
}

#movie-image {
  box-shadow: 20px 20px 10px #888888;
  margin-left: 7em;
}

#info-container {
  width: 50%;
  background-color: #ffffff;
  border: 1px solid black;
  border-radius: 4px;
  opacity: 0.6;
  float: right;
  padding: 1em 2em;
  margin-right: 2em;
}

#comments-container {
  float:right;
  margin-right: 5em;
}

textarea {
  height: 2em;
  border-radius: 4px;
  box-shadow: 20px 20px 10px #888888;
  padding: 1em;
  font-size: 1em;
}  

#album-container {
  width: 100%;
  text-align: center;
}

#song-container {
  width: 20%;
  text-align: center;
  background-color: #ffffff;
  border: 1px solid black;
  border-radius: 4px;
  opacity: 0.6;
  float:right;
  padding: 1em 2em;
  margin-top: 4em;
  margin-right: 2em;
}

#storeinfo-container {
  width: 30%;
  text-align: center;
  background-color: #ffffff;
  border: 1px solid black;
  border-radius: 4px;
  opacity: 0.6;
  padding: 1em 2em;
  margin: 1em;
  margin-left: 28em;
}

#store-footer {
  text-align:center;
}

/* Dropdown Button */
.dropbtn {
    background-color: white;
    color: black;
    font-size: 1.5em;
    border: none;
    cursor: pointer;
    padding: 0;
    margin: 0;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
    position: relative;
    display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
}


/* Change color of dropdown links on hover */
.dropdown-content a:hover {background-color: #f1f1f1}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {
    display: block;
}

/*/////////////CREATE NEW PAGES DISPLAY///////////////*/

#page-title {
  text-align:center;
  margin-top: -2em;
}

.form {
  text-align: center;
  background-color: #ffffff;
  border: 1px solid black;
  border-radius: 4px;
  width: 40%;
  opacity: 0.6;
  padding: 2em;
  margin-top:1em;
  margin-left:16em;
  font-weight: bold;
  font-size: 1.5em;
}

input {
  width: 25%;
  height: 2.5em;
}

/***************MEDIA QUERY FOR BIG TABLET (KINDA? GETS WEIRD at 940px)***************/

@media screen and (max-width: 940px){

   #totally_valley_logo {
    margin: 2em;
  }

  #as-if-sound {
    margin-left: 3.5em;
    margin-top: -5em;
  }

  #wow-sound {
    margin-top: -7em;
  }

  #popular-sound {
    margin-right: 3em;
  }

  #fer-sure-sound {
    margin-right: 4em;
    margin-top: -5em;
  }

  .links-container {
    padding: 2em;
    margin: 1px auto;
  }

  section div a img {
    display: block;
    overflow: auto;
    width: 100%;
    padding: 1em;
    margin: 1em;
  }

   #movielinks-container {
    width: 40%;
    padding: 3.5em;
    margin-top: -20em;
  }

  #songlinks-container {
    width: 40%;
    padding: 3.5em;
    margin-top: -20em;
  }

  #storelinks-container {
    width: 20%;
    padding: 2em;
    margin-top: -8em;
    margin-right: 1em;
  }

  #info-container {
    width: 40%;
  }

  .form {
    margin-left: 10em;
  }

  #storeinfo-container {
    margin-left: 16em;
    width: 40%;
  }
  
  footer {
    position: absolute;
    left: 0;
    bottom: 0;
    height: 100px;
    width: 100%;
  }

}

